--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+    flex-flow: row wrap;
 }
 
 #memes-container img {
@@ -166,4 +167,24 @@ main {
     bottom: 7px;
     left: 15px;
     color: gray;
+}
+
+@media only screen and (max-width: 700px) {
+    nav {
+        display: none;
+    }
+
+    #about #content {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    #about h1 {
+        font-size: 3em;
+    }
+
+    #about h3 {
+        font-size: 1.6em;
+    }
 }
